# dweebuild-v31

./: .env.template  .gitignore  README.md  dweebuild.py  launch_dweebuild.sh  self_improve.py  test_dweebuild.py  test_full_build.py
dweebuild_app/: launch.py  pyproject.toml
dweebuild_app/src/dweebuild/: __init__.py
dweebuild_app/src/dweebuild/agents/: __init__.py  architect.py  engineer.py  qa.py
dweebuild_app/src/dweebuild/core/: __init__.py  agent.py  config.py  llm.py  memory.py  modes.py  orchestrator.py  persistence.py  tech_advisor.py  tool.py  tool_factory.py
dweebuild_app/src/dweebuild/tools/: __init__.py  std_tools.py
dweebuild_app/src/dweebuild/ui/: __init__.py  dashboard.py
