[project]
name = "dweebuild"
version = "31.0.0"
description = "The Architect Edition: Tool-Augmented Agents + TDD Loop"
authors = [{name = "Antigravity", email = "antigravity@gemini.google.com"}]
dependencies = [
    "streamlit>=1.42.0",
    "groq>=0.4.0",
    "playwright>=1.41.0",
    "watchdog>=4.0.0",
    "pytest>=8.0.0",
    "aiofiles>=23.2.1",
    "duckduckgo-search>=5.0.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
